# Bildverarbeitung

./: .gitignore
EinfBV/data/: corrupt_image_1.ppm  corrupt_image_2.ppm  monalisa.pgm  monalisa.ppm  monalisa_ascii.pgm  monalisa_ascii.ppm  monalisa_hsv.ppm
EinfBV/src/: CMakeLists.txt  Graphics2D.dox  doxy.config.in
EinfBV/src/CMake/: FindFreeImage.cmake  IncludeFreeImage.cmake  IncludeOpenGL.cmake  TargetDoc.cmake
EinfBV/src/Examples/: CMakeLists.txt  ExampleGui.cpp  ExampleImageIO.cpp  ExampleLinearAlgebra.cpp
EinfBV/src/Exercises/: CMakeLists.txt
EinfBV/src/Exercises/Exercise01/: CMakeLists.txt  HelloWorld.cpp  TestImage.cpp
EinfBV/src/Exercises/Exercise02/: CMakeLists.txt  TestLineIntersection.cpp
EinfBV/src/Exercises/Exercise03/: CMakeLists.txt  TestAffineTransform.cpp  TestPrimitives.cpp
EinfBV/src/Exercises/Exercise04/: CMakeLists.txt  DrawCanvasGui.cpp
EinfBV/src/Exercises/Exercise05/: CMakeLists.txt  TestColorConversion.cpp
EinfBV/src/Graphics2D/: AffineTransform.cpp  AffineTransform.hh  CMakeLists.txt  Color.cpp  Color.hh  ColorConversion.cpp  ColorConversion.hh  GuiBase.cpp  GuiBase.hh  Image.cpp  Image.hh  ImageIO.cpp  ImageIO.hh  Lines.cpp  Lines.hh  Matrices.cpp  Matrices.hh  PrimitiveBase.cpp  PrimitiveBase.hh  PrimitiveLine.cpp  PrimitiveLine.hh  PrimitivePoint.cpp  PrimitivePoint.hh  PrimitivePolygon.cpp  PrimitivePolygon.hh  PrimitiveRectangle.cpp  PrimitiveRectangle.hh  Vectors.cpp  Vectors.hh
EinfBV/src/Templates/: TemplateClass.cpp  TemplateClass.hh  TemplateMain.cpp
